# geo

./: Cargo.toml
src/: centroid.rs  delaunay.rs  kruskals.rs  lib.rs  main.rs  nearest.rs  point.rs  settings.rs  shelved.rs  utils.rs
src/renderers/: graph.rs  perlin.rs  points.rs  voronoi.rs
src/sketch/: centroid.rs  delaunay.rs  kruskals.rs  mod.rs  nearest.rs  point.rs  settings.rs  utils.rs
src/sketch/renderers/: graph.rs  mod.rs  perlin.rs  points.rs  voronoi.rs
