[package]
name = "geo"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[lib]
crate-type = ["cdylib"]      # Export as a C-compatible dynamic library for wasm-bindgen

[dependencies]
nannou = {version="0.19.0", features = ["wasm-experimental"]}
robust = "1.1.0"
voronator = { path = "../lib/voronator" }
nannou_egui = "0.19.0"
palette = "0.7.5"
image = "0.25.1"
noise = "0.9.0"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.32"
winit = "0.28.7"
async-std = { version = "1.10.0", features = ["unstable"] }

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"
